Added github repo link

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <div class="footer-content">
             <p>Movie App • Built with ♥</p>
             <div class="footer-links">
-                <a href="#" class="footer-link">GitHub Repository</a>
+                <a href="https://github.com/Adnankhan107/Movie-Nest" class="footer-link">GitHub Repository</a>
             </div>
         </div>
     </footer>
